tests/ui/macros/issue-105011.stderr
error: suffixes on string literals are invalid
  --> $DIR/issue-105011.rs:2:14
   |
LL |     println!(""y);
   |              ^^^ invalid suffix `y`

error: aborting due to 1 previous error

