tests/ui/macros/issue-105011.rs
fn main() {
    println!(""y); //~ ERROR suffixes on string literals are invalid
}
